--- a/src/components/DateCounter/style.scss
+++ b/src/components/DateCounter/style.scss
@@ -59,7 +59,7 @@ $light-font-color: $c_white;
   &__value {
     font-size: 45px;
     font-weight: 700;
-    color: $c_blue;
+    color: $c_blue-ribbon;
   }
 
   &__separator {
