--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -31,7 +31,7 @@ $indentation: 60px;
       padding-left: 10px;
       font-size: 16px;
       line-height: 26px;
-      color: $c_white;
+      color: $c_oslo-gray;
     }
   }
 
