--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -6,8 +6,8 @@
   padding: 8px 20px;
   font-size: 14px;
   line-height: 20px;
-  background-color: $c_alabaster;
-  border: 1px solid $c_blue;
+  background-color: $c_catskill_white;
+  border: 1px solid $c_blue-ribbon;
   border-radius: 3px;
 
   &:active,
