--- a/src/components/RoleOverview/FormResponse/style.scss
+++ b/src/components/RoleOverview/FormResponse/style.scss
@@ -10,7 +10,7 @@
 
 .FormResponse {
   padding: 40px;
-  background-color: $c_alabaster;
+  background-color: $c_catskill_white;
 
   &__close {
     width: 32px;
