--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,11 +19,11 @@
 
 p {
   font-size: 12px;
-  color: $c_mine-shaft;
+  color: $c_ebony-clay;
 }
 
 a {
-  color: $c_bluebonnet;
+  color: $c_han_purple;
 }
 
 ul {
