--- a/src/components/LayoutWrapper/style.scss
+++ b/src/components/LayoutWrapper/style.scss
@@ -4,7 +4,7 @@
   $_r: &;
 
   &--dark {
-    background-color: $c_alabaster;
+    background-color: $c_catskill_white;
   }
 
   &--gradient {
@@ -21,7 +21,7 @@
 
   @media #{$screen-sm} {
     &--gradient {
-      background-image: linear-gradient(90deg, $c_alabaster 50%, $c_white 0);
+      background-image: linear-gradient(90deg, $c_catskill_white 50%, $c_white 0);
 
       #{$_r}__container {
         display: flex;
