--- a/src/components/PolicyWrapper/style.scss
+++ b/src/components/PolicyWrapper/style.scss
@@ -23,7 +23,7 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
-    color: $c_caribbean-green;
+    color: $c_blue-ribbon;
   }
 
   @media #{$screen-md} {
