--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -34,7 +34,7 @@ $trigger-height: 50px;
     height: $trigger-height;
     font-size: 24px;
     cursor: pointer;
-    background-color: $c_alabaster;
+    background-color: $c_catskill_white;
     transition: transform $duration ease 0s;
 
     &--active {
@@ -52,7 +52,7 @@ $trigger-height: 50px;
     width: 100%;
     padding: calc(30px + #{$trigger-height}) 30px 30px;
     overflow: scroll;
-    background-color: $c_alabaster;
+    background-color: $c_catskill_white;
     transform: translateY(-100%);
     transition: transform $duration ease 0s;
 
@@ -89,6 +89,7 @@ $trigger-height: 50px;
     font-size: 16px;
     line-height: 20px;
     color: $c_black;
+    text-align: left;
 
     &:hover {
       font-weight: 600;
@@ -96,7 +97,7 @@ $trigger-height: 50px;
     }
 
     &--active {
-      color: $c_caribbean-green;
+      color: $c_blue-ribbon;
     }
   }
 
@@ -108,7 +109,7 @@ $trigger-height: 50px;
     height: 100vh;
     max-width: 230px;
     overflow: scroll;
-    background-color: $c_alabaster;
+    background-color: $c_catskill_white;
 
     &__wrapper {
       height: auto;
@@ -123,7 +124,7 @@ $trigger-height: 50px;
       position: relative;
       z-index: 0;
       display: block;
-      padding-top: 80px;
+      padding-top: calc(#{$navbar-height} + 20px);
       transform: translateY(0);
     }
 
