--- a/src/components/TestnetModal/style.scss
+++ b/src/components/TestnetModal/style.scss
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     padding: 30px 0;
-    background-color: $c_caribbean-green;
+    background-color: $c_blue-ribbon;
   }
 
   &__image {
