--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,4 +1,5 @@
 $border-radius: 6px;
+$border-radius-small: 3px;
 
 $font-sizes: (
   t1: 64px,
@@ -9,8 +10,8 @@ $font-sizes: (
   t6: 26px,
   big: 20px,
   default: 16px,
-  small: 12px,
+  small: 12px
 );
 
 $duration: 400ms;
-$navbar-height: 60px;
+$navbar-height: 90px;
