--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -49,6 +49,7 @@
   &__link {
     display: inline-block;
     padding: 20px 20px 20px 32px;
+    font-size: 20px;
     line-height: 20px;
     color: $c_heather;
 
@@ -82,7 +83,7 @@
     }
   }
 
-  @media #{$screen-sm} {
+  @media #{$screen-md} {
     &__container {
       padding: 0 32px;
     }
@@ -100,7 +101,11 @@
       padding: 20px 0;
 
       &:not(:last-child) {
-        margin-right: 32px;
+        margin-right: 50px;
+      }
+
+      &--button {
+        padding: 34px 40px;
       }
     }
 
