--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -42,15 +42,23 @@ $indentation: 60px;
   }
 
   &__image-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
+    margin-bottom: 16px;
   }
 
   &__image {
     width: 100%;
     padding: 0 80px 40px;
+  }
+
+  &__chip {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   @media #{$screen-sm} {
@@ -67,6 +75,10 @@ $indentation: 60px;
       margin-bottom: $indentation;
 
       #{$_r}__description {
+        margin-bottom: -$indentation;
+      }
+
+      #{$_r}__image-wrapper {
         margin-bottom: -$indentation;
       }
     }
@@ -104,6 +116,7 @@ $indentation: 60px;
 
     &__image-wrapper {
       align-items: stretch;
+      margin-bottom: 0;
 
       button {
         align-self: flex-end;
