--- a/src/components/Subheader/style.scss
+++ b/src/components/Subheader/style.scss
@@ -3,9 +3,9 @@
 .Subheader {
   display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
   margin: 20px 0 40px;
-  text-align: center;
+  text-align: left;
 
   &__title {
     margin-bottom: 20px;
@@ -19,7 +19,7 @@
 
   &__image {
     width: 60px;
-    margin-top: 20px;
+    margin-right: 30px;
   }
 
   @media #{$screen-md} {
