Update scss color variable

--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -1,10 +1,10 @@
 $c_white: #fff;
 $c_black: #000;
 
-$c_dusty-gray: #9b9b9b;
 $c_silver: #cacaca;
 $c_mercury: #e2e2e2;
 $c_blue-haze: #c4c3d9;
+$c_grayc-chateau: #a7aeb7;
 
 $c_blue-ribbon: #4038ff;
 $c_heather: #c3cbd6;
