Update components structure and styling

--- a/src/components/Analytics/AnalyticsItem/style.scss
+++ b/src/components/Analytics/AnalyticsItem/style.scss
@@ -9,11 +9,7 @@
 
   &__image {
     max-height: 80px;
-  }
-
-  &__title,
-  &__value {
-    color: $c_white;
+    color: $c_blue-ribbon;
   }
 
   &__title {
