--- a/src/components/RoleOverview/style.scss
+++ b/src/components/RoleOverview/style.scss
@@ -16,6 +16,7 @@
 
   &__title {
     font-size: 28px;
+    font-weight: 700;
     color: $c_blue-ribbon;
   }
 
@@ -24,9 +25,11 @@
   }
 
   &__image {
-    width: 100%;
-    max-width: 500px;
-    padding: 0 50px;
+    width: 300px;
+    height: 100%;
+    max-height: 240px;
+    margin-top: 30px;
+    color: $c_blue-ribbon;
   }
 
   &__content {
@@ -136,7 +139,6 @@
     }
 
     &__image {
-      height: 240px;
       margin-bottom: -100px;
     }
 
@@ -172,6 +174,11 @@
       flex-direction: row;
       justify-content: space-between;
       padding: 40px;
+      background-image:
+        url('../../assets/background/roles-page-corner-left.png'),
+        url('../../assets/background/roles-page-corner-right.png');
+      background-position: bottom left, top right;
+      background-repeat: no-repeat;
 
       &-container {
         display: flex;
@@ -187,7 +194,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 400px;
+      margin-right: 55px;
       padding: 0;
     }
 
