--- a/src/components/TestnetItem/style.scss
+++ b/src/components/TestnetItem/style.scss
@@ -6,12 +6,16 @@
   margin-bottom: 150px;
 
   &__image {
+    width: 100%;
     height: 100%;
-    max-width: 200px;
+    max-width: 450px;
     margin-bottom: 32px;
   }
 
   &__container {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
     max-width: 100%;
   }
 
@@ -48,8 +52,8 @@
     }
 
     &__content {
-      font-size: 28px;
-      line-height: 35px;
+      font-size: 20px;
+      line-height: 28px;
       text-align: left;
     }
 
