--- a/src/components/ColumnsLayout/style.scss
+++ b/src/components/ColumnsLayout/style.scss
@@ -11,7 +11,7 @@
       }
 
       @media #{$screen-only-sm} {
-        $smCols: 1;
+        $smCols: if($i - 1 > 0, $i - 1, 1);
 
         /* stylelint-disable-next-line */
         & > * {
@@ -25,9 +25,6 @@
 
         & > *:nth-child(#{$smCols}n) {
           margin-right: 0;
-        }
-        @if $i - 1 > 0 {
-          $smCols: $i - 1;
         }
       }
 
