--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -25,7 +25,7 @@
 
   &__logo {
     display: block;
-    width: 170px;
+    width: 150px;
     height: $navbar-height;
   }
 
@@ -49,7 +49,8 @@
   &__link {
     display: inline-block;
     padding: 20px 20px 20px 32px;
-    font-size: 20px;
+    font-family: Px-Grotesk, sans-serif;
+    font-size: 18px;
     line-height: 20px;
     color: $c_heather;
 
@@ -107,7 +108,7 @@
       padding: 20px 0;
 
       &:not(:last-child) {
-        margin-right: 50px;
+        margin-right: 40px;
       }
 
       &--button {
