Update UI for MapInfo component

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   width: 100%;
   padding: 0 32px;
-  font-family: Px-Grotesk, sans-serif;
+  font-family: $font-primary;
   font-size: 18px;
   font-weight: 400;
   line-height: 52px;
