--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -10,8 +10,11 @@ $font-sizes: (
   t6: 26px,
   big: 20px,
   default: 16px,
-  small: 12px
+  small: 12px,
 );
 
 $duration: 400ms;
 $navbar-height: 90px;
+
+$font-primary: Px-Grotesk, sans-serif;
+$font-secondary: Inter, sans-serif;
