--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -49,7 +49,7 @@
   &__link {
     display: inline-block;
     padding: 20px 20px 20px 32px;
-    font-family: Px-Grotesk, sans-serif;
+    font-family: $font-primary;
     font-size: 18px;
     line-height: 20px;
     color: $c_heather;
