--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,7 @@
 @import './base/reset';
 @import './common/colors';
 @import './common/media';
+@import './common/variables';
 
 @font-face {
   font-family: Inter;
@@ -25,7 +26,7 @@
 }
 
 * {
-  font-family: Inter, sans-serif;
+  font-family: $font-secondary;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -54,7 +55,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Px-Grotesk, sans-serif;
+  font-family: $font-primary;
   font-weight: normal;
   color: $c_black;
 }
