--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,7 @@
   src: url('../assets/fonts/Inter-Bold.ttf') format('truetype');
 }
 
+/*
 @font-face {
   font-family: Px-Grotesk;
   src: url('../assets/fonts/Px-Grotesk-Regular.ttf') format('truetype');
@@ -24,6 +25,7 @@
   font-weight: bold;
   src: url('../assets/fonts/Px-Grotesk-Bold.ttf') format('truetype');
 }
+*/
 
 * {
   font-family: $font-secondary;
