Fix hero section styles

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -120,8 +120,9 @@ $indentation: 60px;
         margin: 0;
         padding-right: 0;
         padding-left: 0;
-        font-size: 25px;
-        line-height: 40px;
+        font-size: 20px;
+        line-height: 30px;
+        max-width: 480px;
       }
     }
 
