Link grotesk font

--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -16,6 +16,5 @@ $font-sizes: (
 $duration: 400ms;
 $navbar-height: 90px;
 
-// $font-primary: Px-Grotesk, sans-serif;
-$font-primary: Inter, sans-serif;
+$font-primary: PxGroteskRegular, sans-serif;
 $font-secondary: Inter, sans-serif;
