Add maxWidth for Hero

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -114,6 +114,7 @@ $indentation: 60px;
       padding: 0;
 
       & > p {
+        max-width: 590px;
         padding-right: 0;
         padding-left: 0;
         font-size: 25px;
