--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -12,6 +12,7 @@ $c_light-purple: #536dff;
 $c_han_purple: #322af1;
 $c_ebony-clay: #1f252e;
 $c_oslo-gray: #81858d;
+$c_light-gray: #c7ced8;
 
 $c_catskill_white: #f2f5f9;
 
