--- a/src/components/HeroCard/style.scss
+++ b/src/components/HeroCard/style.scss
@@ -102,6 +102,20 @@
       margin-right: 30px;
     }
   }
+  @media #{$screen-sm} {
+    &__content {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p {
+        font-size: 16px;
+        text-align: left;
+      }
+    }
+  }
 
   @media #{$screen-md} {
     margin: initial;
